# PBL_ZTGK

./: 'l  .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt
Game/: CMakeLists.txt
Game/assets/audio/patterns/: BassPatternPrototype.json  PianoPattern1.json
Game/assets/models/Capsule/: capsule.mtl
Game/assets/models/Cylinder/: cylinder.mtl
Game/assets/models/Earth/: Sun.gltf  Sun.mtl  Untitled.mtl
Game/assets/models/Gramophone/: GramophoneHIGH.mtl  GramophoneLOW.mtl  GramophoneMedium.mtl
Game/assets/models/Player/: Player_with_animations.fbx
Game/assets/models/fa-18/: F_A-18C_Late.mtl
Game/assets/scenes/: Level4_export.json
Game/assets/shaders/: PBRShader.frag  animation.vert  audioShader.vert  basic.frag  basic.vert  brdf.frag  debug.frag  equirectangular.frag  goochShader.frag  irradiance.frag  irradiance.vert  lightShader.frag  lightShader.vert  postprocess.frag  postprocess.vert  prefilter.frag  skybox.vert  toonShader.frag  ui.vert
Game/include/: GameManager.hpp  GameStateView.hpp  InputActions.hpp  LayerExample.hpp  UILayer.hpp
Game/include/Components/: BounceComponent.hpp  CameraController.hpp  CharacterController.hpp  CoinComponent.hpp  CubeControl.hpp  HazardComponent.hpp  InteractivePiano.hpp  LivesManager.hpp  LivesManagerComponent.hpp  PianoKeyTrigger.hpp  RhythmMover.hpp  ScoreManager.hpp  ScoreManagerComponent.hpp  TagSample.hpp  TriggerSample.hpp
Game/include/Layers/: GameLayer.hpp  LayerExample.hpp  MainMenuLayer.hpp  OptionsLayer.hpp  PauseLayer.hpp  UILayer.hpp
Game/include/SceneLoader/: CoinComponentLoader.hpp
Game/src/: GameApp.cpp  GameManager.cpp  InputActions.cpp  LayerExample.cpp  UILayer.cpp
Game/src/Layers/: GameLayer.cpp  LayerExample.cpp  MainMenuLayer.cpp  OptionsLayer.cpp  PauseLayer.cpp  UILayer.cpp
NFSEditor/: CMakeLists.txt
NFSEditor/include/Layers/: EditorLayer.hpp
NFSEditor/include/Panels/: ContentBrowserPanel.hpp  DiagnosticPanel.hpp  EditorPanel.hpp  SceneHierarchyPanel.hpp  ViewportPanel.hpp
NFSEditor/src/: EditorApp.cpp
NFSEditor/src/Layers/: EditorLayer.cpp
NFSEditor/src/Panels/: DiagnosticPanel.cpp  SceneHierarchyPanel.cpp  ViewportPanel.cpp
NFSEngine/: CMakeLists.txt
NFSEngine/include/: NFSEngine.h  nfspch.h
NFSEngine/include/Components/: AnimatorComponent.hpp  AudioComponent.hpp  AudioPatternComponent.hpp  Camera.hpp  Component.hpp  CubeMesh.hpp  DirectionalLight.hpp  ModelComponent.hpp  PhysicsComponents.hpp  PointLight.hpp  SpotLight.hpp  Transform.hpp
NFSEngine/include/Core/: Application.hpp  Assert.hpp  AudioEngine.hpp  AudioManager.hpp  Base.hpp  Cube.hpp  CullingUtils.hpp  DeltaTime.hpp  EntryPoint.hpp  GameObject.hpp  Input.hpp  InputAction.hpp  KeyCodes.hpp  Layer.hpp  LayerStack.hpp  Log.hpp  MathUtils.hpp  PhysicsSystem.hpp  PlatformDetection.hpp  Quad2D.hpp  Scene.hpp  Shader.hpp  Tags.hpp  Text.hpp  Texture.hpp  Timer.hpp
NFSEngine/include/Core/Audio/: AudioEngine.hpp  PatternParser.hpp  RhythmSequencer.hpp
NFSEngine/include/Core/Components/: Component.hpp  CubeMesh.hpp  Transform.hpp
NFSEngine/include/Core/Physics/: CollisionDetector.hpp  PhysicsMath.hpp  PhysicsPrimitives.hpp  PhysicsSystem.hpp
NFSEngine/include/Debug/: DebugCamera.hpp  GPUTimer.hpp  Profiler.hpp
NFSEngine/include/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp  NotePlayedEvent.hpp
NFSEngine/include/ImGui/: ImGuiLayer.hpp  SceneHierarchyPanel.hpp
NFSEngine/include/Renderer/: Animation.hpp  Buffer.hpp  EditorCamera.hpp  EnvironmentMap.hpp  Framebuffer.hpp  Frustum.hpp  GraphicsContext.hpp  Material.hpp  Model.hpp  Renderer.hpp  RendererAPI.hpp  Shader.hpp  Skybox.hpp  Texture.hpp  VertexArray.hpp
NFSEngine/include/SceneLoader/: BoxColliderLoader.hpp  IComponentLoader.hpp  ModelComponentLoader.hpp  SceneLoader.hpp
NFSEngine/include/UI/: ButtonLogic.hpp  Canvas.hpp  UIComponents.hpp  UIFactory.hpp  UIObject.hpp  UIRenderer.hpp
NFSEngine/src/: tinygltf_imp.cpp
NFSEngine/src/Components/: AnimatorComponent.cpp  AudioComponent.cpp  AudioPatternComponent.cpp  Camera.cpp  Component.cpp  CubeMesh.cpp  DirectionalLight.cpp  ModelComponent.cpp  PointLight.cpp  SpotLight.cpp  Transform.cpp
NFSEngine/src/Core/: Application.cpp  AudioEngine.cpp  AudioManager.cpp  Cube.cpp  GameObject.cpp  InputAction.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  PhysicsSystem.cpp  Quad2D.cpp  Scene.cpp  Text.cpp
NFSEngine/src/Core/Audio/: AudioEngine.cpp  PatternParser.cpp  RhythmSequencer.cpp
NFSEngine/src/Core/Components/: CubeMesh.cpp  Transform.cpp
NFSEngine/src/Core/Physics/: CollisionDetector.cpp  PhysicsMath.cpp  PhysicsSystem.cpp
NFSEngine/src/Debug/: DebugCamera.cpp
NFSEngine/src/ImGui/: ImGUiLayer.cpp  SceneHierarchyPanel.cpp
NFSEngine/src/Renderer/: Animation.cpp  Buffer.cpp  EditorCamera.cpp  EnvironmentMap.cpp  Framebuffer.cpp  Frustum.cpp  Material.cpp  Model.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
NFSEngine/src/SceneLoader/: SceneLoader.cpp
NFSEngine/src/UI/: ButtonLogic.cpp  Canvas.cpp  UIFactory.cpp  UIRenderer.cpp
assets/shaders/: basic.frag  basic.vert  text.frag  text.vert  ui.frag
include/: AudioManager.hpp  Cube.hpp  Engine.hpp  Game.hpp  Input.hpp  NFSEngine.h  Quad2D.hpp  Shader.hpp  Text.hpp  Texture.hpp
include/Core/: Application.hpp  Cube.hpp  Engine.hpp  EntryPoint.hpp  Game.hpp  Input.hpp  LayerStack.hpp  Quad2D.hpp  Shader.hpp  Text.hpp  Texture.hpp
include/UI/: Canvas.hpp  UIComponents.hpp  UIFactory.hpp  UIObject.hpp  UIRenderer.hpp
src/: AudioManager.cpp  Cube.cpp  Engine.cpp  Game.cpp  main.cpp
src/Core/: Application.cpp  AudioManager.cpp  Engine.cpp  Game.cpp  Quad2D.cpp  Text.cpp  Texture.cpp  main.cpp
src/Renderer/: Buffer.hpp  GraphicsContext.hpp
src/UI/: Canvas.cpp  UIFactory.cpp  UIRenderer.cpp
